Bug 1123950 - Use hints to check for a DOMMediaStream's tracks. r=roc, a=jocheng

Allows us to see all tracks that have been created, by hints or
otherwise, rather than just the ones with data available.